tests/NormalTests/paczka1/fuzzy1/53838777.err
Error in line 1: 59T13dkAU S725 14,6
Error in line 5: 59T13dkAU A654 19,8
Error in line 7: 59T13dkAU S725 82,2
Error in line 17: EnQy4H S813 93,4
Error in line 38: sXYb7QbAvo A654 66,45
